--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "dependencies": {
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.0",
+    "firebase": "^9.6.8",
+    "jquery": "^3.6.0",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.17"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "vite": "^2.6.14"
   },
   "scripts": {
