--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
+    "prettier": "^2.6.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "vite": "^2.6.14"
   },
   "scripts": {
